第十一次 提交

--- a/application/index/view/index/register.html
+++ b/application/index/view/index/register.html
@@ -5,7 +5,7 @@
         <meta name="author" content="order by dede58.com"/>
 		<title>用户注册</title>
 		<link rel="stylesheet" type="text/css" href="/static/css/login.css">
-
+		<script src="/static/js/jquery-3.4.1.min.js" ></script>
 	</head>
 	<body>
 		<form  method="post" action="./regist.php">
@@ -25,7 +25,7 @@
 					<div class="username">手&nbsp;&nbsp;机&nbsp;&nbsp;号:&nbsp;&nbsp;<input class="shurukuang" type="text" name="tel" placeholder="请填写正确的手机号"/><span>填写下手机号吧，方便我们联系您！</span></div>
 					<div class="username">
 						<div class="left fl">验&nbsp;&nbsp;证&nbsp;&nbsp;码:&nbsp;&nbsp;<input class="yanzhengma" type="text" name="username" placeholder="请输入验证码"/></div>
-						<div class="right fl"><img src="/static/image/yanzhengma.jpg"></div>
+						<div class="right fl"><img src="{:captcha_src()}" class="tinVso"onclick="javascript:this.src='{:captcha_src()}?rand='+Math.random()" ></div>
 						<div class="clear"></div>
 					</div>
 				</div>
