--- a/application/index/view/index/login.html
+++ b/application/index/view/index/login.html
@@ -5,6 +5,7 @@
         <meta name="author" content="order by dede58.com"/>
 		<title>会员登录</title>
 		<link rel="stylesheet" type="text/css" href="/static/css/login.css">
+		<script src="/static/js/jquery-3.4.1.min.js" ></script>
 		
 	</head>
 	<body>
@@ -28,7 +29,7 @@
 					<div class="username">密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;<input class="shurukuang" type="password" name="password" placeholder="请输入你的密码"/></div>
 					<div class="username">
 						<div class="left fl">验证码:&nbsp;<input class="yanzhengma" type="text" name="username" placeholder="请输入验证码"/></div>
-						<div class="right fl"><img src="/static/image/yanzhengma.jpg"></div>
+						<div class="right fl"><img src="{:captcha_src()}" class="tinVso"onclick="javascript:this.src='{:captcha_src()}?rand='+Math.random()" ></div>
 						<div class="clear"></div>
 					</div>
 				</div>
