--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -5,8 +5,7 @@
         <meta name="author" content="order by dede58.com"/>
 		<title>会员登录</title>
 		<link rel="stylesheet" type="text/css" href="/static/css/login.css">
-		<script src="/static/js/jquery-3.4.1.min.js" ></script>
-		
+
 	</head>
 	<body>
 		<!-- login -->
@@ -15,7 +14,7 @@
 				<a href="{:url('index/index/index')}" ><img src="/static/image/mistore_logo.png" alt=""></a>
 			</div>
 		</div>
-		<form  method="post" action="./login.php" class="form center">
+		<div class="form center">
 		<div class="login">
 			<div class="login_center">
 				<div class="login_top">
@@ -25,26 +24,28 @@
 					<div class="xian center"></div>
 				</div>
 				<div class="login_main center">
-					<div class="username">用户名:&nbsp;<input class="shurukuang" type="text" name="username" placeholder="请输入你的用户名"/></div>
-					<div class="username">密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;<input class="shurukuang" type="password" name="password" placeholder="请输入你的密码"/></div>
+					<div class="username">用户名:&nbsp;<input class="shurukuang" type="text" name="username" id="naDname" autocomplete="off" placeholder="请输入你的用户名"/></div>
+					<div class="username">密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;<input class="shurukuang" type="password" id="naDpass" name="password" placeholder="请输入你的密码"/></div>
 					<div class="username">
-						<div class="left fl">验证码:&nbsp;<input class="yanzhengma" type="text" name="username" placeholder="请输入验证码"/></div>
-						<div class="right fl"><img src="{:captcha_src()}" class="tinVso"onclick="javascript:this.src='{:captcha_src()}?rand='+Math.random()" ></div>
-						<div class="clear"></div>
+                        <div class="left fl">验证码:&nbsp;<input class="yanzhengma" type="text" id="vicode" name="username" autocomplete="off" placeholder="请输入验证码"/></div>
+						<div class="right fl"><img style="height: 43px;width: 100px"  src="{:captcha_src()}" class="tinVso"onclick="javascript:this.src='{:captcha_src()}?rand='+Math.random()" >  </div>
+						<div class="clear" id="text"></div><div class="imgst"></div>
 					</div>
 				</div>
-				<div class="login_submit">
-					<input class="submit" type="submit" name="submit" value="立即登录" >
+				<div class="login_submit" id="denglu">
+					<input class="submit" type="submit" name="submit"  value="立即登录" >
 				</div>
-				
+
 			</div>
 		</div>
-		</form>
+		</div>
 		<footer>
 			<div class="copyright">简体 | 繁体 | English | 常见问题</div>
 			<div class="copyright">小米公司版权所有-京ICP备10046444-<img src="/static/image/ghs.png" alt="">京公网安备11010802020134号-京ICP证110507号</div>
 
 		</footer>
-		{load href="/static/js/login.js" /}
+		
+		<script src="/static/js/jquery-3.4.1.min.js"></script>
+		<script src="/static/js/login.js"></script>
 	</body>
 </html>
