--- a/public/static/css/login.css
+++ b/public/static/css/login.css
@@ -73,3 +73,6 @@ input:focus{border: 2px solid orange;}
 footer{width: 100%;height: 80px;background:#fff;padding: 30px 0;}
 footer .copyright{height: 30px;line-height: 30px;font-size: 13px;word-spacing: 15px;text-align: center;}
 footer .copyright:first-of-type{margin-top: 10px;}
+
+#text{margin-left: 30px;}
+.imgst{background: url(/static/imgfan/warning.png) 0px 0px no-repeat;width:25px;height:25px;margin: -32px 0 0 0;display:none;}
