第十八次 提交

--- a/application/index/view/index/dingdanzhongxin.html
+++ b/application/index/view/index/dingdanzhongxin.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
         <meta name="author" content="order by dede58.com"/>
 		<title>小米商城-个人中心</title>
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 	</head>
 	<body>
 	<!-- start header -->
@@ -12,7 +12,7 @@
 			<div class="top center">
 				<div class="left fl">
 					<ul>
-						<li><a href="http://www.mi.com/" target="_blank">小米商城</a></li>
+						<li><a href="{:url('index/index/index')}" >小米商城</a></li>
 						<li>|</li>
 						<li><a href="">MIUI</a></li>
 						<li>|</li>
@@ -38,11 +38,13 @@
 					<div class="gouwuche fr"><a href="">我的订单</a></div>
 					<div class="fr">
 						<ul>
-							<li><a href="./login.html" target="_blank">登录</a></li>
+							<li><a href="{:url('index/index/deng')}" >登录</a></li>
 							<li>|</li>
-							<li><a href="./register.html" target="_blank" >注册</a></li>
+							<li><a href="{:url('index/index/note')}" >注册</a></li>
 							<li>|</li>
-							<li><a href="./self_info.html">个人中心</a></li>
+							<li><a href="{:url('index/head/selfInfo')}">个人中心</a></li>
+							<li><a href="javascript:">消息通知</a></li>
+							<li><a href="javascript:">订单</a></li>
 						</ul>
 					</div>
 					<div class="clear"></div>
@@ -53,7 +55,7 @@
 	<!--end header -->
 	<!-- start banner_x -->
 		<div class="banner_x center">
-			<a href="./index.html" target="_blank"><div class="logo fl"></div></a>
+			<a href="{:url('index/index/index')}" ><div class="logo fl"></div></a>
 			<a href=""><div class="ad_top fl"></div></a>
 			<div class="nav fl">
 				<ul>
@@ -89,7 +91,7 @@
 			<div class="ddzx">订单中心</div>
 			<div class="subddzx">
 				<ul>
-					<li><a href="" style="color:#ff6700;font-weight:bold;">我的订单</a></li>
+					<li><a href="javascript:" style="color:#ff6700;font-weight:bold;">我的订单</a></li>
 					<li><a href="">意外保</a></li>
 					<li><a href="">团购订单</a></li>
 					<li><a href="">评价晒单</a></li>
@@ -98,7 +100,7 @@
 			<div class="ddzx">个人中心</div>
 			<div class="subddzx">
 				<ul>
-					<li><a href="./self_info.html">我的个人中心</a></li>
+					<li><a href="{:url('/index/head/selfInfo')}">我的个人中心</a></li>
 					<li><a href="">消息通知</a></li>
 					<li><a href="">优惠券</a></li>
 					<li><a href="">收货地址</a></li>
@@ -108,7 +110,7 @@
 		<div class="rtcont fr">
 			<div class="ddzxbt">交易订单</div>
 			<div class="ddxq">
-				<div class="ddspt fl"><img src="./image/gwc_xiaomi6.jpg" alt=""></div>
+				<div class="ddspt fl"><img src="/static/image/gwc_xiaomi6.jpg" alt=""></div>
 				<div class="ddbh fl">订单号:1705205643098724</div>
 				<div class="ztxx fr">
 					<ul>
@@ -122,7 +124,7 @@
 				<div class="clear"></div>
 			</div>
 			<div class="ddxq">
-				<div class="ddspt fl"><img src="./image/liebiao_hongmin4_dd.jpg" alt=""></div>
+				<div class="ddspt fl"><img src="/static/image/liebiao_hongmin4_dd.jpg" alt=""></div>
 				<div class="ddbh fl">订单号:170526435444865</div>
 				<div class="ztxx fr">
 					<ul>
