--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -18,7 +18,7 @@
 			<div class="top center">
 				<div class="left fl">
 					<ul>
-						<li><a href="http://www.mi.com/" target="_blank">小米商城</a></li>
+						<li><a href="http://www.mi.com/" >小米商城</a></li>
 						<li>|</li>
 						<li><a href="">MIUI</a></li>
 						<li>|</li>
@@ -41,14 +41,16 @@
 					</ul>
 				</div>
 				<div class="right fr">
-					<div class="gouwuche fr"><a href="">购物车</a></div>
+					<div class="gouwuche fr"><a href="{:url('index/head/shopping')}">购物车</a></div>
 					<div class="fr">
 						<ul>
 							<li><a href="{:url('/index/index/deng')}" >登录</a></li>
 							<li>|</li>
 							<li><a href="{:url('/index/index/note')}" >注册</a></li>
 							<li>|</li>
+							<li><a href="{:url('/index/head/selfInfo')}">个人中心</a></li> <!-- 临时添加[个人中心] -->
 							<li><a href="">消息通知</a></li>
+							<li><a href="{:url('/index/head/order')}">订单</a></li> <!-- 临时添加[订单] -->
 						</ul>
 					</div>
 					<div class="clear"></div>
@@ -107,7 +109,7 @@
 											<div class="clear"></div>
 										</a>
 									</div>
-									<div class="xuangou_right fr"><a href="./xiangqing.html" target="_blank">选购</a></div>
+									<div class="xuangou_right fr"><a href="{:url('index/head/xiangqing')}" >选购</a></div>
 									<div class="clear"></div>
 								</div>
 								<div>
