--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -18,7 +18,7 @@
 			<div class="top center">
 				<div class="left fl">
 					<ul>
-						<li><a href="http://www.mi.com/" >小米商城</a></li>
+						<li><a href="{:url('/index/index/index')}" >小米商城</a></li>
 						<li>|</li>
 						<li><a href="">MIUI</a></li>
 						<li>|</li>
@@ -41,7 +41,7 @@
 					</ul>
 				</div>
 				<div class="right fr">
-					<div class="gouwuche fr"><a href="{:url('index/head/shopping')}">购物车</a></div>
+					<div class="gouwuche fr"><a href="{:url('index/ornet/sureorder')}">购物车</a></div>
 					<div class="fr">
 						<ul>
 							<li><a href="{:url('/index/index/deng')}" >登录</a></li>
