--- a/application/index/view/index/liebiao.html
+++ b/application/index/view/index/liebiao.html
@@ -35,7 +35,7 @@
 					</ul>
 				</div>
 				<div class="right fr">
-					<div class="gouwuche fr"><a href="">购物车</a></div>
+					<div class="gouwuche fr"><a href="{:url('index/head/shopping')}">购物车</a></div>
 					<div class="fr">
 						<ul>
 							<li><a href="{:url('/index/index/deng')}" >登录</a></li>
