--- a/application/index/view/index/dingdanzhongxin.html
+++ b/application/index/view/index/dingdanzhongxin.html
@@ -37,15 +37,7 @@
 				<div class="right fr">
 					<div class="gouwuche fr"><a href="">我的订单</a></div>
 					<div class="fr">
-						<ul>
-							<li><a href="{:url('index/index/deng')}" >登录</a></li>
-							<li>|</li>
-							<li><a href="{:url('index/index/note')}" >注册</a></li>
-							<li>|</li>
-							<li><a href="{:url('index/head/selfInfo')}">个人中心</a></li>
-							<li><a href="javascript:">消息通知</a></li>
-							<li><a href="javascript:">订单</a></li>
-						</ul>
+						{$yilog}
 					</div>
 					<div class="clear"></div>
 				</div>
