第二十五次 提交

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -38,7 +38,7 @@
 					</ul>
 				</div>
 				<div class="right fr">
-					<div class="gouwuche fr"><a href="{:url('index/ornet/sureorder')}">购物车</a></div>
+					<div class="gouwuche fr"><a href="{:url('index/head/shopping')}">购物车</a></div>
 					<div class="fr">
 						{$yilog}
 					</div>
