--- a/application/index/view/order/sureorder.html
+++ b/application/index/view/order/sureorder.html
@@ -16,19 +16,14 @@
 			
 			<div class="wdgwc fl ml40">确认订单</div>
 			<div class="dlzc fr">
-				<ul>
-					<li><a href="{:url('index/index/deng')}">登录</a></li>
-					<li>|</li>
-					<li><a href="{:url('index/index/note')}">注册</a></li>	
-				</ul>
-				
+				{$yilog}
 			</div>
 			<div class="clear"></div>
 		</div>
 		<div class="xiantiao"></div>
 		
-			
-		</div>
+		hello word!
+		<!-- 创建一个div，写内容 -->
 
   
 
