--- a/application/index/view/index/liebiao.html
+++ b/application/index/view/index/liebiao.html
@@ -37,13 +37,7 @@
 				<div class="right fr">
 					<div class="gouwuche fr"><a href="{:url('index/head/shopping')}">购物车</a></div>
 					<div class="fr">
-						<ul>
-							<li><a href="{:url('/index/index/deng')}" >登录</a></li>
-							<li>|</li>
-							<li><a href="{:url('/index/index/note')}" >注册</a></li>
-							<li>|</li>
-							<li><a href="">消息通知</a></li>
-						</ul>
+						{$yilog}
 					</div>
 					<div class="clear"></div>
 				</div>
